Yasnippet NEWS -- history of user-visible changes.

Copyright (C) 2017-2024 Free Software Foundation, Inc.
See the end of the file for license conditions.

Changes since 0.14.0:

- Bug fixes and code cleanups.
- Accept ${N} as another syntax for $N (issue #1012).
- Understand the new AUCTeX modes hierarchy (issue #1193).
- Try and use `major-mode-remap-alist` to find the right snippets for
  Tree Sitter modes (issue #1169).

* 0.14.0 (Dec 22, 2019)

** Changes

*** New 'yas-auto-next' macro, automatically moves to next field.
See Github #937.

*** Yasnippet now officially requires Emacs 23 or greater.
See Github #940.

*** Snippets for 'fundamental-mode' are available in all modes.
See Github #949, and #936.

*** New function for snippets, 'yas-completing-read'.
See Github #934.

*** New function 'yas-maybe-expand-abbrev-key-filter'.
This can be used for making conditional keybindings for snippets.
Promoted from 'yas--maybe-expand-key-filter'.  See Github #943.

*** DEL can now be used to clear fields, similar <delete>.
It is bound to the new conditional command 'yas-maybe-clear-field', which may
be bound to other keys as well.  See Github #960 and #957.

*** Snippet field movement commands may now trigger eldoc.
See Github #952.

*** New variable 'yas-keymap-disable-hook'.
Can be used (e.g., for company-mode) to temporarily disable
'yas-keymap' bindings, or any binding made by the new function
'yas-filtered-definition'.  See Github #987.

*** New variable 'yas-inhibit-overlay-modification-protection'.
This allows a snippet to remain active, even if some commands make
modifications outside the expected area (i.e., the active snippet
field).

*** 'yas-minor-mode' is no longer enabled in temp buffers.
That is, buffers whose name starts with a space.  This setting may be
undone by removing 'yas-temp-buffer-p' from
'yas-dont-activate-functions'.  See Github #985.

*** Accept unescaped '{', for LSP compatibility.
See Github #979.

** Fixed bugs
