@@ -199,7 +199,7 @@ But replace link to \"current\" page with a span element."
           ;;:with-broken-links mark
           :html-postamble
           ,(concat "<hr><p class='creator'>Generated by %c from "
-                   (or rev yas--version) " " date "</p>\n"
+                   rev " " date "</p>\n"
                    "<p class='xhtml-validation'>%v</p>\n")))
        (project (assoc "yasnippet" org-publish-project-alist)))
   (when rev ;; Rakefile :doc:upload uses "html-revision".
